--- a/pages/usefulContacts.html
+++ b/pages/usefulContacts.html
@@ -35,7 +35,7 @@
     <ul id="contactsList" class="animate__animated animate__fadeInUp">
 
     </ul>
-    <div id="container-recomendation" class="mx-5"></div>
+    <div id="containerRecomendations" class="mx-5"></div>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../scripts/recomendation.js"></script>
