estilos pagina index y curso hechos

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     <header>
         <h1>Portal Educativo</h1>
         <p>Un universo de herramientas para el Docente.</p>
+        <img src="media/profesor.svg" alt="logo">
     </header>
     <!-- Login Ingreso-->
     <section class="login">
-        <form action="pages/course.html" method="post" id="formLogin">
-            <label for="">Ingresa tus Datos</label>
+        <form class="animate__animated animate__lightSpeedInLeft" action="pages/course.html" method="post" id="formLogin">
+            <label for="">Ingrese un Nombre de Usuario</label>
             <br>
             <input type="text" placeholder="Nombre de Usuario" name="username" id="userName" required>
             <label for="">Ingrese nombre del Curso con el que desea trabajar</label>
@@ -37,7 +38,7 @@
     <!-- Footer-->
     <footer>
         <!-- Abre Copyright -->
-        <div class="text-center text-black-50 ">
+        <div class="text-center text-black-50">
             <a href="https://github.com/Sebavarg"> Copyright © 2022 Vargas Zingaretti Repositorio</a>
         </div>
         <!-- Cierra Copyright -->
