--- a/pages/course.html
+++ b/pages/course.html
@@ -8,18 +8,26 @@
     <meta name="description" content="Un portal para ayudar al docente a llenar planillas y llevar control de sus alumnos ahorrando tiempo.">
     <meta name="keywords" content="Docente, calculo de notas, lista de alumnos, profesor, alumno, herramienta, cursos, agregar alumno">
     <title>Docente Digital - Cursos. </title>
+    <!-- Icono!  -->
     <link href="../media/profesor.svg" rel="icon">
+    <!-- Bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- Hoja de Estilo  -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- animate CSS  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
+    <!--Main Course -->
     <section class="mainCourse">
+        <!--Bienvenida -->
         <section class="welcome">
-            <h1 class="titulo__h1">Administrador de Cursos</h1>
+            <h1 class="animate__animated animate__backInRight" class="titulo__h1"><i class="bi bi-journal-plus"></i> Administrador de Cursos</h1>
             <h2 class="titulo__h2">Gestione su curso, desde aquí puede: ver su curso, agregar y eliminar alunmnos</h2>
         </section>
+        <!--Curso -->
         <section class="course">
             <article id="courseAdded"></article>
             <article>
@@ -27,17 +35,18 @@
             </article>
         </section>
     </section>
+    <!--Herramientas -->
     <section class="herramientas">
         <section class="sectionHerramientas">
-            <h1 class="titulo__h1">Herramientas útiles</h1>
-            <h2 class="titulo__h2">Ponemos a disposición herramientas para el trabajo diario del docente</h2>
+            <h1 class="animate__animated animate__backInRight" class="titulo__h1 animate__backInRight"><i class="bi bi-wrench-adjustable-circle"></i> Herramientas útiles</h1>
+            <h2 class="titulo__h2 animate__backInRight">Ponemos a disposición herramientas para el trabajo diario del docente</h2>
         </section>
         <section class="herramientasOpciones">
             <article id="calculadoraNotas" class="herramienta__tarjeta">Calculadora de Notas</article>
-            <article id="contactosUtiles" class="herramienta__tarjeta">Contactos </article>
+            <article id="contactosUtiles" class="herramienta__tarjeta"> Agenda de Contactos </article>
         </section>
     </section>
-
+    <!--Sweet Alert 1 -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../scripts/course.js"></script>
     <script src="../scripts/relocation.js "></script>
