--- a/pages/scoringScale.html
+++ b/pages/scoringScale.html
@@ -12,14 +12,21 @@
 
 <body>
     <header>
-        <h1>Escala de Notas</h1>
-        <p>Obtene tu escala de notas solo ingresando un puntaje máximo.</p>
+        <h1 class="animate__animated animate__backInRight" class="titulo_h1">Escala de Notas</h1>
+        <h2 class="titulo__h2">Obtene tu escala de notas solo ingresando un puntaje máximo.</h2>
     </header>
-    <section>
-        <input type="number" id="score" placeholder="Ingrese Total de puntos">
-        <input type="submit" id="btnGetScoringScale" value="Obtener Datos">
+    <section class="login">
+        <form>
+            <label for="">Ingrese el puntaje máximo de el examen </label>
+            <input type="number" id="score" placeholder="Puntaje Total">
+            <input id="boton" type="submit" class="btnGetScoringScale" value="Obtener Datos">
+        </form>
         <div id="containerScoringScale"></div>
+        <div id="containerScale">
+            <p id="btn-volver"><a href="course.html">Volver al Curso</a></p>
+        </div>
     </section>
+
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../scripts/scoringScale.js"></script>
 </body>
