--- a/pages/usefulContacts.html
+++ b/pages/usefulContacts.html
@@ -5,37 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <title>Portal Educativo- Contactos Utiles</title>
+    <title>Portal Educativo-Agenda de Contactos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 
 <body>
-    <div class="row">
-        <div class="col-6">
-            <h1 class="animate__animated animate__fadeInLeftBig">Contactos Utiles</h1>
+    <section>
+        <div>
+            <h1 class="animate__animated animate__fadeInLeftBig titulo_h1"><i class="bi bi-person-plus-fill"></i> Agenda de Contactos</h1>
+            <h2 class="animate__animated animate__fadeInLeftBig titulo__h2"> Agrega tus contactos </h2>
         </div>
-        <div class="col-3 p-3">
-            <button class="btn btn-success" id="recomendations">Ver contactos recomendados</button>
-        </div>
-    </div>
+    </section>
+    <section class="contacts">
+        <form id="form-contact" class="form animate__animated animate__fadeInRightBig">
+            <input name="contactName" type="text" id="contactName" placeholder="Nombre" class="form-control m-1" required>
+            <input name="contactPhone" type="tel" id="contactPhone" placeholder="Teléfono" class="form-control m-1" required>
+            <input name="contactMail" type="email" id="contactMail" placeholder="Ingese Mail " class="form-control m-1" required>
+            <button type="submit" class="boton">Agregar contacto</button>
+        </form>
+        <ul id="contactsList" class="animate__animated animate__fadeInUp">
+        </ul>
+    </section>
 
-
-    <form id="form-contact" class="form animate__animated animate__fadeInRightBig">
-        <input name="contactName" type="text" id="contactName" placeholder="Nombre" class="form-control m-1" required>
-        <input name="contactPhone" type="tel" id="contactPhone" placeholder="Teléfono" class="form-control m-1" required>
-        <input name="contactMail" type="email" id="contactMail" placeholder="Ingese Mail " class="form-control m-1" required>
-        <button type="submit" class="btn btn-success m-1">Agregar contacto</button>
-    </form>
-
-    <ul id="contactsList" class="animate__animated animate__fadeInUp">
-
-    </ul>
-    <div id="containerRecomendations" class="mx-5"></div>
+    <section class="recomendations">
+        <button class="boton" id="recomendations">Ver contactos recomendados  <i class="bi bi-arrow-down-square-fill"></i></button>
+        <div id="containerRecomendations"></div>
+        <p id="btn-volver"><a href="course.html">Volver al Curso</a></p>
+    </section>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../scripts/recomendation.js"></script>
