--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <meta name="keywords" content="Docente, calculo de notas, lista de alumnos, profesor, alumno, herramienta">
     <title>Docente Digital - Portal Educativo. </title>
     <link href="media/profesor.svg" rel="icon">
+    <!-- Animate CSS  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
