--- a/pages/course.html
+++ b/pages/course.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Un portal para ayudar al docente a llenar planillas y llevar control de sus alumnos ahorrando tiempo.">
     <meta name="keywords" content="Docente, calculo de notas, lista de alumnos, profesor, alumno, herramienta, cursos, agregar alumno">
-    <title>Docente Digital - Cursos. </title>
+    <title>Portal Educativo - Cursos. </title>
     <!-- Icono!  -->
     <link href="../media/profesor.svg" rel="icon">
     <!-- Bootstrap  -->
