--- a/pages/usefulContacts.html
+++ b/pages/usefulContacts.html
@@ -7,19 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Portal Educativo-Agenda de Contactos</title>
+    <meta name="description" content="Un portal para ayudar al docente a llenar planillas y llevar control de sus alumnos ahorrando tiempo.">
+    <meta name="keywords" content="Docente, calculo de notas, lista de alumnos, profesor, alumno, herramienta, contactos, agenda">
+    <!-- AnimateCSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Bootstrap  Icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 
 <body>
+    <!-- Abre Seccion Agenda -->
     <section>
         <div>
             <h1 class="animate__animated animate__fadeInLeftBig titulo_h1"><i class="bi bi-person-plus-fill"></i> Agenda de Contactos</h1>
             <h2 class="animate__animated animate__fadeInLeftBig titulo__h2"> Agrega tus contactos </h2>
         </div>
     </section>
+    <!-- Cierra Seccion Agenda -->
+    <!-- Abre Formulario Contactos -->
     <section class="contacts">
         <form id="form-contact" class="form animate__animated animate__fadeInRightBig">
             <input name="contactName" type="text" id="contactName" placeholder="Nombre" class="form-control m-1" required>
@@ -27,15 +34,18 @@
             <input name="contactMail" type="email" id="contactMail" placeholder="Ingese Mail " class="form-control m-1" required>
             <button type="submit" class="boton">Agregar contacto</button>
         </form>
+        <!-- Cierra Contactos -->
+        <!-- Muestra Contactos Agregados -->
         <ul id="contactsList" class="animate__animated animate__fadeInUp">
         </ul>
     </section>
-
+    <!-- Abre Seccion Recomendaciones -->
     <section class="recomendations">
         <button class="boton" id="recomendations">Ver contactos recomendados  <i class="bi bi-arrow-down-square-fill"></i></button>
         <div id="containerRecomendations"></div>
         <p id="btn-volver"><a href="course.html">Volver al Curso</a></p>
     </section>
+    <!-- Cierra Recomendaciones -->
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../scripts/recomendation.js"></script>
